--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,6 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
@@ -13,26 +8,16 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+body {
+  background-color: #1e1e1e;
 }
 
-.App-link {
-  color: #61dafb;
+.signup-button {
+  background-image: linear-gradient(99.66deg, #001F46 0%, #00C9D1 139.45%);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.footer {
+  background-image: url("../public/images/footer_bg.png");
+  background-size: 100% 100%;
+  height: 100px;
 }
