--- a/src/App.css
+++ b/src/App.css
@@ -57,3 +57,11 @@ body {
 .landing-activities {
   box-shadow: 0px 8px 40px rgba(0, 122, 132, 0.15);
 }
+
+.review-carousel .carousel img {
+  width: auto !important;
+}
+
+.review-carousel-card {
+  box-shadow: 0px 15px 60px rgba(11, 112, 119, 0.1);
+}
