--- a/src/App.css
+++ b/src/App.css
@@ -98,3 +98,7 @@ body {
   background-size: 100% 100%;
 }
 
+/* services page */
+.services-info-card {
+  box-shadow: 0px 37px 80px -20px rgba(0, 122, 132, 0.1);
+}
