apply page ui done, with some validation issues

--- a/src/App.css
+++ b/src/App.css
@@ -88,8 +88,22 @@ body {
 }
 
 /* apply now page */
-.apply-form input {
+.apply-form-input {
   box-shadow: 0px 17px 30px -10px rgba(0, 122, 132, 0.15);
+}
+
+select {
+  color: gray; /* Change the text color of the select */
+}
+
+/* Style the default option */
+/* select option { */
+  /* color: black; Change the color of regular options */
+/* } */
+
+/* Style the default placeholder option */
+select option[disabled] {
+  color: gray; /* Placeholder color */
 }
 
 /* about us page */
