--- a/src/App.css
+++ b/src/App.css
@@ -87,6 +87,26 @@ body {
   background-color: black;
 }
 
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  position: absolute; /* Allows positioning */
+  background: white;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
 /* apply now page */
 .apply-form-input {
   box-shadow: 0px 17px 30px -10px rgba(0, 122, 132, 0.15);
