--- a/src/App.css
+++ b/src/App.css
@@ -133,7 +133,48 @@ body {
 
 /* news detail */
 
-.news-detail-card {
+.news-detail-card, .news-other-card {
   box-shadow: 0px 37px 124.5px -20px rgba(0, 122, 132, 0.15);
   border-radius: 24px;
+}
+
+.news-detail-card h2 {
+  font-size: 36px;
+  padding: 20px;
+  font-weight: 500;
+}
+
+.news-detail-card p img {
+  width: 100%;
+}
+
+.news-detail-card .wp-block-kevinbatdorf-code-block-pro {
+  background-color: rgba(0, 0, 0, 0.01);
+  border: 1px solid rgba(51, 51, 51, 0.1);
+  margin: 5px 0;
+}
+
+.news-detail-card .wp-block-kevinbatdorf-code-block-pro .line {
+  display: block;
+  unicode-bidi: embed;
+  font-family: monospace;
+  white-space: pre;
+}
+
+.news-detail-card table {
+  margin: 10px;
+  caption-side: bottom;
+  border-collapse: collapse;
+  border-spacing: 0;
+  table-layout: fixed;
+  border: 1px solid rgba(51, 51, 51, 0.1);
+}
+
+.news-detail-card th, .news-detail-card td {
+  padding: 0.4em;
+  border-width: 0 1px 1px 0;
+}
+
+.news-detail-card a {
+  color: #FD661F;
 }
